--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -10,3 +10,18 @@ user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
 common.select=Выбрать
+meal.calories=Калории
+meal.date=Дата
+meal.description=Описание
+meal.fromDate=От даты
+meal.toDate=До даты
+meal.fromTime=От времени
+meal.toTime=До времени
+meal.filter=Фильтр
+meal.addMeal=Добавить еду
+meal.update=Обновить
+meal.delete=Удалить
+meal.createMeal=Новая еда
+meal.dateTime=Дата и время
+meal.save=Сохранить
+meal.cancel=Отмена
