HW6 JdbcUserRepository, JspMealController refactored jsp meal forms, test classes refactored validation fixed except User check in meal

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -22,6 +22,7 @@ meal.addMeal=Добавить еду
 meal.update=Обновить
 meal.delete=Удалить
 meal.createMeal=Новая еда
+meal.editMeal=Изменить еду
 meal.dateTime=Дата и время
 meal.save=Сохранить
 meal.cancel=Отмена
